--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^4.0.3",
     "jquery": "^3.5.0",
-    "mysql2": "^2.1.0"
+    "mysql2": "^2.1.0",
+    "panzoom": "^9.2.4"
   }
 }
