--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "test",
+  "name": "BCIT Interactive Map 2020",
   "version": "1.0.0",
-  "description": "",
+  "description": "BCIT Interactive Map 2020",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
