updated name value in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BCIT Interactive Map 2020",
+  "name": "bcit_interactive_map_2020",
   "version": "1.0.0",
   "description": "BCIT Interactive Map 2020",
   "main": "index.js",
